fix: adapt code section to sidebar state

--- a/src/components/code.css
+++ b/src/components/code.css
@@ -1,6 +1,9 @@
 section {
   max-width: calc(100vw - 18rem);
 }
+section.with-sidebar {
+  max-width: calc(100vw - 2rem);
+}
 pre {
   border-radius:.5rem;
   padding-left:0!important;
